--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -1,5 +1,27 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.container {
+  width: 900px;
+  padding: 20px;
+  margin: 0 auto;
+  background-color: #eff3f4;
+}
+
+.contents_img_left {
+  float: left;
+  margin: 0 20px 10px 0;
+}
+
+.contents_img_right {
+  float: right;
+  margin: 0 0px 10px 20px;
+}
+
+.contents_text {
+  font-size: 18px;
+  line-height: 22px;
+  word-break:break-all;
+}
 
 /* 回答はここに書いてね */
