--- a/layout_parts/q3/css/style.css
+++ b/layout_parts/q3/css/style.css
@@ -12,6 +12,10 @@
   background-color: #ecf1f2;
 }
 
+.contents tr:last-child {
+  border-top: dashed #000 2px;
+}
+
 .contents th , .contents td {
   padding: 10px;
   border: solid #dedede 1px;
@@ -27,10 +31,6 @@
 .contents td {
   font-size: 16px;
   line-height: 22px;
-}
-
-.total-cal {
-  border-top: dashed #000 2px;
 }
 
 /* 回答はここに書いてね */
