--- a/layout_parts/q5/css/style.css
+++ b/layout_parts/q5/css/style.css
@@ -2,7 +2,7 @@
 
 /* 回答はここに書いてね */
 
-.q5_wrapper {
+.q5-wrapper {
   position: relative;
   height: 500px;
   width: 500px;
@@ -10,7 +10,7 @@
   background-color: #ecf1f2;
 }
 
-.q5_wrapper .q5_box {
+.q5-wrapper .q5_box {
   position: absolute;
   height: 100px;
   width: 100px;
@@ -20,63 +20,63 @@
   font-weight: bold;
 }
 
-.q5_wrapper .box_1 {
+.q5-wrapper .box_1 {
   z-index: 1;
   top: 40px;
   left: 200px;
   background-color: #ffefd3;
 }
 
-.q5_wrapper .box_2 {
+.q5-wrapper .box_2 {
   z-index: 2;
   top: 120px;
   left: 280px;
   background-color: #7084de;
 }
 
-.q5_wrapper .box_3 {
+.q5-wrapper .box_3 {
   z-index: 3;
   top: 200px;
   left: 360px;
   background-color: #d0ecea;
 }
 
-.q5_wrapper .box_4 {
+.q5-wrapper .box_4 {
   z-index: 4;
   top: 280px;
   left: 280px;
   background-color: #8b7a5e;
 }
 
-.q5_wrapper .box_5 {
+.q5-wrapper .box_5 {
   z-index: 5;
   top: 360px;
   left: 200px;
   background-color: #9fd6d2;
 }
 
-.q5_wrapper .box_6 {
+.q5-wrapper .box_6 {
   z-index: 6;
   top: 280px;
   left: 120px;
   background-color: #fffee4;
 }
 
-.q5_wrapper .box_7 {
+.q5-wrapper .box_7 {
   z-index: 7;
   top: 200px;
   left: 40px;
   background-color: #deae70;
 }
 
-.q5_wrapper .box_8 {
+.q5-wrapper .box_8 {
   z-index: 8;
   top: 120px;
   left: 120px;
   background-color: #de70cf;
 }
 
-.q5_wrapper .box_8::after {
+.q5-wrapper .box_8:after {
   z-index: 9;
   position: absolute;
   top: 0;
@@ -87,7 +87,7 @@
   content: "";
 }
 
-.q5_wrapper .box_9 {
+.q5-wrapper .box_9 {
   z-index: 10;
   position: fixed;
   top: 10px;
