--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -25,13 +25,13 @@
   display: table;
 }
 
-.table_c {
+.q6-table .table_c {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
 }
 
-.table_c_text {
+.q6-table .table_c_text {
   display: inline-block;
   padding: 10px;
   background-color: #fff;
@@ -43,7 +43,7 @@
   align-items: center;
 }
 
-.flex_text {
+.q6-flex .flex_text {
   padding: 10px;
   background-color: #fff;
 }
@@ -52,7 +52,7 @@
   position: relative;
 }
 
-.fixed_text {
+.q6-fixed .fixed_text {
   position: absolute;
   top: 0;
   right: 0;
@@ -65,7 +65,7 @@
   position: relative;
 }
 
-.variable_text {
+.q6-variable .variable_text {
   position: absolute;
   top: 50%;
   left: 50%;
