[fix]q2,3のフィードバック箇所の修正
q2,q3にてフィードバックしていただいた箇所のコード修正を行いました。

--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -8,6 +8,12 @@
   background-color: #eff3f4;
 }
 
+.clearfix {
+  content: "";
+  display: block;
+  clear: both;
+}
+
 .contents_img_left {
   float: left;
   margin: 0 20px 10px 0;
