--- a/layout_parts/q10/css/style.css
+++ b/layout_parts/q10/css/style.css
@@ -2,4 +2,39 @@
 
 /* 回答はここに書いてね */
 
+.q10-balloon {
+  box-sizing: border-box;
+  position: relative;
+  width: 500px;
+  padding: 20px;
+  border: 5px #222 solid;
+  border-radius: 30px;
+  margin: 0 auto;
+}
+
+.q10-balloon:before {
+  content: "";
+  position: absolute;
+  bottom: -45px;
+  left: 30px;
+  border: 20px solid transparent;
+  border-top: 20px solid #222;
+  z-index: 1;
+}
+
+.q10-balloon:after {
+  content: "";
+  position: absolute;
+  bottom: -38px;
+  left: 30px;
+  border: 20px solid transparent;
+  border-top: 20px solid #fff;
+  z-index: 2;
+}
+
+.balloon_text {
+  font-size: 16px;
+  line-height: 16px;
+}
+
 /* 回答はここに書いてね */
