--- a/layout_parts/q9/css/style.css
+++ b/layout_parts/q9/css/style.css
@@ -1,5 +1,62 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.q9-1_wrapper {
+  position: relative;
+  overflow: hidden;
+  width: 500px;
+  height: 333px;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+.q9-1_img {
+  transition: 0.5s;
+}
+
+.q9-1_wrapper:hover .q9-1_img {
+  transform: scale(1.5, 1.5);
+}
+
+.q9-1_figure {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  bottom: -150%;
+  transition: 0.5s;
+  background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,8));
+}
+
+.q9-1_text {
+  box-sizing: border-box;
+  position: absolute;
+  bottom: 0;
+  padding: 20px;
+  font-size: 16px;
+  line-height: 16px;
+  color: #fff;
+  word-break: break-all;
+}
+
+.q9-1_wrapper:hover .q9-1_figure {
+  bottom: 0;
+}
+
+.q9-2_spinner {
+  height: 100px;
+  width: 100px;
+  border:10px #ecf1f2 solid;
+  border-top-color: #00bcd4; 
+  border-radius: 50%;
+  margin: 20px auto;
+  animation: rotation 1.1s infinite linear;
+}
+
+@keyframes rotation {
+  100%  {
+    transform: rotate(360deg);
+  }
+}
+
 
 /* 回答はここに書いてね */
