[fix]q7,9_フィードバックの修正
q7-5,q9-1でフィードバック箇所の修正を行いました。

--- a/layout_parts/q7/css/style.css
+++ b/layout_parts/q7/css/style.css
@@ -77,15 +77,13 @@
 
 .q7-margin_main {
   width: 100%;
+  padding-left: 350px;
   margin-left: -300px;
+  box-sizing: border-box;
 }
 
 .q7-margin_text {
   font-size: 16px;
-}
-
-.q7-margin_main .q7-margin_text {
-  margin-left: 350px;
 }
 
 /* 回答はここに書いてね */
