--- a/layout_parts/q9/css/style.css
+++ b/layout_parts/q9/css/style.css
@@ -22,7 +22,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  bottom: -150%;
+  bottom: -100%;
   transition: 0.5s;
   background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,8));
 }
@@ -30,6 +30,7 @@
 .q9-1_text {
   box-sizing: border-box;
   position: absolute;
+  left: 0;
   bottom: 0;
   padding: 20px;
   font-size: 16px;
